# NER_by_Mary

./: pyproject.toml
src/: main.py  nohup.out
src/.ipynb_checkpoints/: main-checkpoint.py
src/core/: consts.py  mountains_ner.py  mountains_simple.py
src/core/.ipynb_checkpoints/: mountains_ner-checkpoint.py
